Updated a couple lines

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <nav>
           <ul class="nav-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
           </ul>
         </nav>
         <div class="time-display" id="timeDisplay">Loading...</div>
@@ -40,14 +39,14 @@
           <p>
             I'm most active on
             <a href="https://github.com/msbdacosta">GitHub</a> if you want to
-            chat or see what I'm up to.
+            chat or see what I'm creating.
           </p>
         </div>
 
         <div class="social-links">
           <a href="https://github.com/msbdacosta">GitHub</a>
           <a href="https://linkedin.com/in/sbcosta">LinkedIn</a>
-          <a href="msbdacosta@hotmail.com">Email</a>
+          <a href="mailto:msbdacosta@hotmail.com">Email</a>
         </div>
       </main>
     </div>
