Updated links on home page

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@
 
           <p>
             I'm most active on
-            <a href="https://github.com/msbdacosta">GitHub</a> if you want to
-            chat or see what I'm creating.
+            <a href="https://github.com/msbdacosta" target="_blank">GitHub</a>
+            if you want to chat or see what I'm creating.
           </p>
         </div>
 
         <div class="social-links">
-          <a href="https://github.com/msbdacosta">GitHub</a>
-          <a href="https://linkedin.com/in/sbcosta">LinkedIn</a>
+          <a href="https://github.com/msbdacosta" target="_blank">GitHub</a>
+          <a href="https://linkedin.com/in/sbcosta" target="_blank">LinkedIn</a>
           <a href="mailto:msbdacosta@hotmail.com">Email</a>
         </div>
       </main>
