--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </p>
 
           <p>
-            I'm currently a Freelancer where I focus on leaning and practicing
+            I'm currently a Freelancer where I focus on learning and practicing
             as much as possible. In my free time, I'm exploring new ideas
             particularly in E-commerce and Open Source Projects.
           </p>
